# something-cool

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .projectile  .stignore  CMakeLists.txt  Makefile  README.md  build.bat  build_linux.sh  build_win.bat  build_win32.bat  colors.bat  test_linux.sh  test_win.bat
.github/workflows/: build.yml  test.yml
sdl2/: .editorconfig
sdl2/src/: render.cpp
src/: app.c  app.cpp  app.h  app.hpp  app_utils.c  app_utils.cpp  assets.c  assets.h  audio.c  audio.cpp  audio.h  basic.vert  camera2d.c  camera2d.h  camera3d.c  camera3d.h  cocoa_input.h  cocoa_window.m  cursor.c  cursor.h  entity.cpp  file_io.c  file_io.h  font.c  font.h  geometry.c  geometry.h  geometry.hpp  gfx.c  gfx.h  gl.c  gl.cpp  gl.h  hot.c  hot_code.c  hot_code_load.c  hot_stub.c  imgui_impl_sdl.cpp  imgui_style.cpp  include.c  (+146 more)
src/ext/: cute_tiled.h  wglext.h
tests/: CMakeLists.txt  m4_test.hpp  run_all_tests.cpp  span_test.hpp  test.cpp  test.hpp
third/: HandmadeMath.h  stb_image.h  stb_rect_pack.h  stb_truetype.h  stb_vorbis.c
third/glad/: gl.h  glad.c
third/glad/glad/: glad.h
third/nuklear/: nuklear_overview.c  nuklear_sdl_gl3.h
win32-opengl/: build_linux.sh  build_win32.bat
win32-opengl/src/: app.cpp  app.h  app_utils.cpp  audio.h  language_layer.h  maths.cpp  maths.h  memory.cpp  memory.h  os.cpp  os.h  program_options.h  render.h  scene.h  scene_game.cpp  ui.cpp  ui.h  win32_file_io.cpp  win32_opengl.cpp  win32_timer.cpp  win32_utils.cpp
